# bluetooth_apigw

./: README.md  pyproject.toml
bluetooth_apigw/bluetooth/: constants.py  exceptions.py  gap.py  gatt.py  general.py  utils.py
bluetooth_apigw/common/: auto_name.py
bluetooth_apigw/entrypoints/http_server/: __main__.py  app.py  config.py  utils.py
bluetooth_apigw/entrypoints/http_server/middleware/: __init__.py  error.py
bluetooth_apigw/entrypoints/http_server/routes/: __init__.py
bluetooth_apigw/entrypoints/http_server/routes/bluetooth/: __init__.py  characteristics.py  connection.py  connection_info.py  discover.py
bluetooth_apigw/entrypoints/http_server/routes/service/: __init__.py  healthcheck.py
bluetooth_apigw/entrypoints/http_server/routes/ws/: __init__.py  notificatios.py
