[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Neznakomec <vladimirsukko19999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"
aiohttp-pydantic = "^2.0.0"
dbus-python = "^1.3.2"
pygobject = "^3.46.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
